# zotero-deepread-bridge

./: .gitignore  LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
docs/: obsidian-shell-command.md  workflow.md
examples/: config.example.yaml
src/zotero_deepread_bridge/: __init__.py  __main__.py  cli.py
tools/: zotero_collection_pdfs.py
